--- a/Cat-Capstone/frontend/src/components/routes/userCatComponent/userCats.css
+++ b/Cat-Capstone/frontend/src/components/routes/userCatComponent/userCats.css
@@ -58,17 +58,20 @@
 
 /* Button styling */
 .add-cat-button {
-  display: block;
-  margin: 20px auto;
-  padding: 10px 20px;
+  font-weight: bolder;
+  padding: 10px;
+  border: 1px solid rgba(168, 161, 115, 0.5);
+  border-radius: 5px;
+  margin-top: 10px;
   background-color: rgba(168, 161, 115, 0.5);
-  color: white;
-  border: none;
-  border-radius: 4px;
+  color: #4c5059;
   cursor: pointer;
   font-size: 16px;
+  width: 10%;
+  align-self: center;
 }
 
+/* Button hover styling */
 .add-cat-button:hover {
   background-color: rgba(168, 161, 115, 0.7);
 }
