--- a/Cat-Capstone/frontend/src/css/signin.css
+++ b/Cat-Capstone/frontend/src/css/signin.css
@@ -58,6 +58,7 @@ input::placeholder {
 }
 
 .error-message {
+  align-self: center;
   color: #721c24;
   background-color: #f8d7da;
   border: 1px solid #f5c6cb;
